--- a/index.html
+++ b/index.html
@@ -20,23 +20,22 @@
 
     <ul class="showcase">
         <li>
-            <div class="seat">
-                <small>N/A</small>
-            </div>
+            <div class="seat"></div>
+            <small>N/A</small>
         </li>
         <li>
-            <div class="seat selected">
-                <small>Selected</small>
-            </div>
+            <div class="seat selected"></div>
+            <small>Selected</small>
         </li>
         <li>
-            <div class="seat occupied">
-                <small>Occupied</small>
-            </div>
+            <div class="seat occupied"></div>
+            <small>Occupied</small>
+
         </li>
     </ul>
 <div class="container">
     <div class="screen"></div>
+
     <div class="row">
         <div class="seat occupied"></div>
         <div class="seat occupied"></div>
@@ -99,7 +98,6 @@
     </div>
 </div>
 <p class="text">You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span></p>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
